aura/parser/generated/parser/auraParser.py
# Generated from parser/aura.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class auraParser ( Parser ):

    grammarFileName = "aura.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'import'", "'as'", "'from'", "'.'", "','", 
                     "'*'", "'let'", "'mut'", "'='", "';'", "'const'", "'async'", 
                     "'def'", "'('", "')'", "'{'", "'}'", "'<'", "'>'", 
                     "'**'", "'->'", "'class'", "'extends'", "'implements'", 
                     "'@'", "'staticmethod'", "'classmethod'", "'property'", 
                     "'self'", "'trait'", "'type'", "'module'", "'export'", 
                     "'assert'", "'if'", "'else'", "'unless'", "'guard'", 
                     "'while'", "'until'", "'for'", "'in'", "'step'", "'loop'", 
                     "'break'", "'continue'", "'return'", "'try'", "'catch'", 
                     "'finally'", "'with'", "'match'", "'case'", "'+='", 
                     "'-='", "'*='", "'/='", "'//='", "'%='", "'**='", "'&='", 
                     "'|='", "'^='", "'<<='", "'>>='", "'??='", "'|>'", 
                     "'?'", "':'", "'?:'", "'??'", "'or'", "'and'", "'|'", 
                     "'^'", "'&'", "'=='", "'!='", "'is'", "'<='", "'>='", 
                     "'..'", "'..<'", "'<<'", "'>>'", "'+'", "'-'", "'/'", 
                     "'//'", "'%'", "'not'", "'~'", "'['", "']'", "'?.'", 
                     "'?['", "'...'", "'true'", "'false'", "'null'", "'none'", 
                     "'=>'", "'_'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "IDENT", "NUMBER", "STRING", "WS", "COMMENT", "BLOCK_COMMENT" ]

    RULE_program = 0
    RULE_importDecl = 1
    RULE_modulePath = 2
    RULE_importItems = 3
    RULE_declaration = 4
    RULE_varDecl = 5
    RULE_constDecl = 6
    RULE_funcDecl = 7
    RULE_typeParams = 8
    RULE_parameterList = 9
    RULE_parameter = 10
    RULE_returnType = 11
    RULE_classDecl = 12
    RULE_classBody = 13
    RULE_methodDef = 14
    RULE_propertyDef = 15
    RULE_traitDecl = 16
    RULE_traitMember = 17
    RULE_typeDecl = 18
    RULE_moduleDecl = 19
    RULE_moduleMember = 20
    RULE_decorator = 21
    RULE_statement = 22
    RULE_assertStmt = 23
    RULE_exprStmt = 24
    RULE_ifStmt = 25
    RULE_unlessStmt = 26
    RULE_guardStmt = 27
    RULE_whileStmt = 28
    RULE_untilStmt = 29
    RULE_forStmt = 30
    RULE_loopStmt = 31
    RULE_breakStmt = 32
    RULE_continueStmt = 33
    RULE_returnStmt = 34
    RULE_tryStmt = 35
    RULE_exceptionPattern = 36
    RULE_withStmt = 37
    RULE_withItem = 38
    RULE_matchStmt = 39
    RULE_matchCase = 40
    RULE_blockStmt = 41
    RULE_expression = 42
    RULE_assignment = 43
    RULE_assignOp = 44
    RULE_pipe = 45
    RULE_ternary = 46
    RULE_elvis = 47
    RULE_coalesce = 48
    RULE_logicalOr = 49
    RULE_logicalAnd = 50
    RULE_bitwiseOr = 51
    RULE_bitwiseXor = 52
    RULE_bitwiseAnd = 53
    RULE_equality = 54
    RULE_comparison = 55
    RULE_rangeExpr = 56
    RULE_shift = 57
    RULE_additive = 58
    RULE_multiplicative = 59
    RULE_castExpr = 60
    RULE_unary = 61
    RULE_exponentiation = 62
    RULE_postfix = 63
    RULE_call = 64
    RULE_index = 65
    RULE_member = 66
    RULE_safeNav = 67
    RULE_spreadOp = 68
    RULE_primary = 69
    RULE_literal = 70
    RULE_argumentList = 71
    RULE_argument = 72
    RULE_listLiteral = 73
    RULE_dictLiteral = 74
    RULE_kvPair = 75
    RULE_setLiteral = 76
    RULE_tupleLiteral = 77
    RULE_lambdaExpr = 78
    RULE_comprehension = 79
    RULE_comprehensionClause = 80
    RULE_matchExpr = 81
    RULE_blockExpr = 82
    RULE_pattern = 83
    RULE_orPattern = 84
    RULE_asPattern = 85
    RULE_constructorOrLiteral = 86
    RULE_patternList = 87
    RULE_fieldPatterns = 88
    RULE_fieldPattern = 89
    RULE_typeAnnotation = 90
    RULE_unionType = 91
    RULE_primaryType = 92
    RULE_typeArgs = 93
    RULE_fieldTypes = 94
    RULE_fieldType = 95

    ruleNames =  [ "program", "importDecl", "modulePath", "importItems", 
                   "declaration", "varDecl", "constDecl", "funcDecl", "typeParams", 
                   "parameterList", "parameter", "returnType", "classDecl", 
                   "classBody", "methodDef", "propertyDef", "traitDecl", 
                   "traitMember", "typeDecl", "moduleDecl", "moduleMember", 
                   "decorator", "statement", "assertStmt", "exprStmt", "ifStmt", 
                   "unlessStmt", "guardStmt", "whileStmt", "untilStmt", 
                   "forStmt", "loopStmt", "breakStmt", "continueStmt", "returnStmt", 
                   "tryStmt", "exceptionPattern", "withStmt", "withItem", 
                   "matchStmt", "matchCase", "blockStmt", "expression", 
                   "assignment", "assignOp", "pipe", "ternary", "elvis", 
                   "coalesce", "logicalOr", "logicalAnd", "bitwiseOr", "bitwiseXor", 
                   "bitwiseAnd", "equality", "comparison", "rangeExpr", 
                   "shift", "additive", "multiplicative", "castExpr", "unary", 
                   "exponentiation", "postfix", "call", "index", "member", 
                   "safeNav", "spreadOp", "primary", "literal", "argumentList", 
                   "argument", "listLiteral", "dictLiteral", "kvPair", "setLiteral", 
                   "tupleLiteral", "lambdaExpr", "comprehension", "comprehensionClause", 
                   "matchExpr", "blockExpr", "pattern", "orPattern", "asPattern", 
                   "constructorOrLiteral", "patternList", "fieldPatterns", 
                   "fieldPattern", "typeAnnotation", "unionType", "primaryType", 
                   "typeArgs", "fieldTypes", "fieldType" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    T__56=57
    T__57=58
    T__58=59
    T__59=60
    T__60=61
    T__61=62
    T__62=63
    T__63=64
    T__64=65
    T__65=66
    T__66=67
    T__67=68
    T__68=69
    T__69=70
    T__70=71
    T__71=72
    T__72=73
    T__73=74
    T__74=75
    T__75=76
    T__76=77
    T__77=78
    T__78=79
    T__79=80
    T__80=81
    T__81=82
    T__82=83
    T__83=84
    T__84=85
    T__85=86
    T__86=87
    T__87=88
    T__88=89
    T__89=90
    T__90=91
    T__91=92
    T__92=93
    T__93=94
    T__94=95
    T__95=96
    T__96=97
    T__97=98
    T__98=99
    T__99=100
    T__100=101
    T__101=102
    T__102=103
    IDENT=104
    NUMBER=105
    STRING=106
    WS=107
    COMMENT=108
    BLOCK_COMMENT=109

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(auraParser.EOF, 0)

        def importDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(auraParser.ImportDeclContext)
            else:
                return self.getTypedRuleContext(auraParser.ImportDeclContext,i)


        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(auraParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(auraParser.DeclarationContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(auraParser.StatementContext)
            else:
                return self.getTypedRuleContext(auraParser.StatementContext,i)


        def getRuleIndex(self):
            return auraParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = auraParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 197
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 7305076909635722) != 0) or ((((_la - 86)) & ~0x3f) == 0 and ((1 << (_la - 86)) & 1896675) != 0):
                self.state = 195
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 192
                    self.importDecl()
                    pass

                elif la_ == 2:
                    self.state = 193
                    self.declaration()
                    pass

                elif la_ == 3:
                    self.state = 194
                    self.statement()
                    pass


                self.state = 199
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 200
            self.match(auraParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImportDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return auraParser.RULE_importDecl

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class FromImportContext(ImportDeclContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a auraParser.ImportDeclContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def modulePath(self):
            return self.getTypedRuleContext(auraParser.ModulePathContext,0)

        def importItems(self):
            return self.getTypedRuleContext(auraParser.ImportItemsContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFromImport" ):
                listener.enterFromImport(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFromImport" ):
                listener.exitFromImport(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFromImport" ):
                return visitor.visitFromImport(self)
            else:
                return visitor.visitChildren(self)


    class ImportModuleContext(ImportDeclContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a auraParser.ImportDeclContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def modulePath(self):
            return self.getTypedRuleContext(auraParser.ModulePathContext,0)

        def IDENT(self):
            return self.getToken(auraParser.IDENT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImportModule" ):
                listener.enterImportModule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImportModule" ):
                listener.exitImportModule(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImportModule" ):
                return visitor.visitImportModule(self)
            else:
                return visitor.visitChildren(self)



    def importDecl(self):

        localctx = auraParser.ImportDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_importDecl)
        self._la = 0 # Token type
        try:
            self.state = 213
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                localctx = auraParser.ImportModuleContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 202
                self.match(auraParser.T__0)
                self.state = 203
                self.modulePath()
                self.state = 206
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==2:
                    self.state = 204
                    self.match(auraParser.T__1)
                    self.state = 205
                    self.match(auraParser.IDENT)


                pass
            elif token in [3]:
                localctx = auraParser.FromImportContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 208
                self.match(auraParser.T__2)
                self.state = 209
                self.modulePath()
                self.state = 210
                self.match(auraParser.T__0)
                self.state = 211
                self.importItems()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ModulePathContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self, i:int=None):
            if i is None:
                return self.getTokens(auraParser.IDENT)
            else:
                return self.getToken(auraParser.IDENT, i)

        def getRuleIndex(self):
            return auraParser.RULE_modulePath

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModulePath" ):
                listener.enterModulePath(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModulePath" ):
                listener.exitModulePath(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitModulePath" ):
                return visitor.visitModulePath(self)
            else:
                return visitor.visitChildren(self)




    def modulePath(self):

        localctx = auraParser.ModulePathContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_modulePath)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 215
            self.match(auraParser.IDENT)
            self.state = 220
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==4:
                self.state = 216
                self.match(auraParser.T__3)
                self.state = 217
                self.match(auraParser.IDENT)
                self.state = 222
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImportItemsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self, i:int=None):
            if i is None:
                return self.getTokens(auraParser.IDENT)
            else:
                return self.getToken(auraParser.IDENT, i)

        def getRuleIndex(self):
            return auraParser.RULE_importItems

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImportItems" ):
                listener.enterImportItems(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImportItems" ):
                listener.exitImportItems(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImportItems" ):
                return visitor.visitImportItems(self)
            else:
                return visitor.visitChildren(self)




    def importItems(self):

        localctx = auraParser.ImportItemsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_importItems)
        self._la = 0 # Token type
        try:
            self.state = 235
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [104]:
                self.enterOuterAlt(localctx, 1)
                self.state = 223
                self.match(auraParser.IDENT)
                self.state = 228
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 224
                        self.match(auraParser.T__4)
                        self.state = 225
                        self.match(auraParser.IDENT) 
                    self.state = 230
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

                self.state = 232
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==5:
                    self.state = 231
                    self.match(auraParser.T__4)


                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 2)
                self.state = 234
                self.match(auraParser.T__5)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDecl(self):
            return self.getTypedRuleContext(auraParser.VarDeclContext,0)


        def constDecl(self):
            return self.getTypedRuleContext(auraParser.ConstDeclContext,0)


        def funcDecl(self):
            return self.getTypedRuleContext(auraParser.FuncDeclContext,0)


        def classDecl(self):
            return self.getTypedRuleContext(auraParser.ClassDeclContext,0)


        def traitDecl(self):
            return self.getTypedRuleContext(auraParser.TraitDeclContext,0)


        def typeDecl(self):
            return self.getTypedRuleContext(auraParser.TypeDeclContext,0)


        def moduleDecl(self):
            return self.getTypedRuleContext(auraParser.ModuleDeclContext,0)


        def getRuleIndex(self):
            return auraParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = auraParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_declaration)
        try:
            self.state = 244
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 237
                self.varDecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 238
                self.constDecl()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 239
                self.funcDecl()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 240
                self.classDecl()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 241
                self.traitDecl()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 242
                self.typeDecl()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 243
                self.moduleDecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(auraParser.IDENT, 0)

        def typeAnnotation(self):
            return self.getTypedRuleContext(auraParser.TypeAnnotationContext,0)


        def expression(self):
            return self.getTypedRuleContext(auraParser.ExpressionContext,0)


        def getRuleIndex(self):
            return auraParser.RULE_varDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDecl" ):
                listener.enterVarDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDecl" ):
                listener.exitVarDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDecl" ):
                return visitor.visitVarDecl(self)
            else:
                return visitor.visitChildren(self)




    def varDecl(self):
